[package]
name = "dislog-hal-sm2"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-integer = "0.1.42"
num-bigint = "0.1"
num-traits = "0.2.11"
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
cryptape-sm = { git = "https://github.com/citahub/libsm"}