[package]
name = "dislog-hal-sm2"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>", "xujian009 <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false }
rand = "0.7.3"
lazy_static = "1.4.0"
num-integer = "0.1.42"
num-bigint = "0.1"
num-traits = "0.2.11"
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
libsm = { git = "https://github.com/citahub/libsm"}

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
