[package]
name = "dislog-hal-sm2"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>", "xujian009 <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4", default-features = false }
lazy_static = "1.4.0"
rand = "0.7"
num-bigint = { version = "0.2.6", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
num-integer = { version = "0.1.43", default-features = false }
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
libsm = { git = "https://github.com/Yinet-project/libsm"}
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]
